<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="40dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity"
    xmlns:lns="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Email"
        android:inputType="text"
        android:id="@+id/et_email"/>
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:layout_below="@+id/et_email"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Login"
        android:id="@+id/btn_login"
        android:layout_below="@id/et_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/anda_belum_punya_akun"/>
        <TextView
            android:id="@+id/tv_buat_disini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/buat_disini"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="5dp" />
    </LinearLayout>

</LinearLayout>