<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:id="@+id/signup_id">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/user_signup_id"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:hint=""
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="20"
        android:textStyle="bold"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/password_signup_id"
        android:text="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:hint=""
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="40"
        android:textStyle="bold"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"/>

</LinearLayout>